--- a/Brent correlations.ipynb
+++ b/Brent correlations.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "19a996bb",
+   "metadata": {},
+   "source": [
+    "# Brent correlation with energy sector stocks.\n",
+    "\n",
+    "This model is still in development and made for educational purposes. It should not be taken as a decision rule or advice at all.\n",
+    "\n",
+    "In this script I start with simple data modelling for Brent correlation with stocks from energy sector. This model can also be modified to fit for other companies and commodities such as gold, wheat and soybean.\n",
+    "\n",
+    "For now the model analyzes price correlation split on deciles and we can see it varies for different oil price ranges. \n",
+    "Things on development: \n",
+    "\n",
+    "-Data accuracy test (since yahoo finance is useful to start with but sometimes unreliable for a final version). \n",
+    "-Different group analysis with machine learning methods. \n",
+    "-Better plots and graphical understanding.\n",
+    "\n",
+    "Any sugestion is welcomed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "82ef5b33",
